pod-security/mutate/set-privilege-escalation/.chainsaw-test/chainsaw-step-01-assert-1.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: set-privilege-escalation
status:
  ready: true
